--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,5 @@ env_logger = "0.11"
 once_cell = "1.20"
 dotenvy = "0.15"
 serde = { version = "1.0", features = ["derive"] }
+diesel = { version = "2.2.12", features = ["postgres", "r2d2"] }
+scopeguard = "1.2.0"
