--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,4 @@ dotenvy = "0.15"
 serde = { version = "1.0", features = ["derive"] }
 diesel = { version = "2.2.12", features = ["postgres", "r2d2"] }
 scopeguard = "1.2.0"
+serde_json = "1.0.143"
